Attempt to fix issue with headers not showing on mobile

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3276,7 +3276,7 @@ input, select, textarea {
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
 			justify-content: center;
-			min-height: 100vh;
+			min-height: 100svh;
 		}
 
 			body.is-ie .wrapper.fullscreen {
